--- a/portfolio/src/styles/education.css
+++ b/portfolio/src/styles/education.css
@@ -1,5 +1,5 @@
 .education {
-    background-color: var(--color-primary);
+    background: var(--color-primary);
     border-top: 1px solid var(--color-secondary);
     border-bottom: 1px solid var(--color-secondary);
 }
