--- a/portfolio/src/styles/global.css
+++ b/portfolio/src/styles/global.css
@@ -1,7 +1,6 @@
 /* ==== Default Styles ===== */
 :root {
     --font-main: "JetBrains Mono", monospace;
-    /* Typography sizes */
     --h1-size: clamp(2rem, 7.5vh, 3.75rem);
     --h2-size: clamp(1.5rem, 4vh, 3rem);
     --h3-size: clamp(1rem, 2vh, 2rem);
@@ -10,42 +9,34 @@
     --h6-size: clamp(0.6rem, 0.625vh, 1.4rem);
     --p-size: clamp(0.5rem, 0.55vh, 1.2rem);
     --a-size: clamp(0.7rem, 0.5vh, 1rem);
-    /* Spacing */
     --gap-1: clamp(0.5rem, 1vh, 2.5rem);
     --gap-2: clamp(0.25rem, 0.5vh, 1.25rem);
     --pad-1: min(5%, 40px);
     --pad-2: min(10%, 80px);
     --pad-3: min(15%, 120px);
     --pad-4: min(20%, 160px);
-    /* Letter spacing */
     --ls-1: clamp(4px, 1vw, 8px);
     --ls-2: clamp(2px, 0.6vw, 4px);
     --ls-3: clamp(1px, 0.3vw, 2px);
-    /* Colors */
-    --color-primary: #ff8b52;
-    --color-secondary: #0f0f0f;
+    --color-primary: #ff914d;
+    --color-secondary: #141414;
     --color-tertiary: #1e1e1e;
-    --color-quaternary: #bc5733;
     --color-accent: #e1e1e1;
-    /* Effects */
     --blur-1: rgba(255, 139, 82, 0.5);
-    --blur-2: rgba(225, 225, 225, 0.5);
-    --gradient-cd: linear-gradient(45deg, rgba(208, 98, 58, 0.25) 0%, rgba(255, 179, 145, 0.25) 100%);
-    --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    --blur-2: rgba(15, 15, 15, 0.5);
+    --box-shadow: 0 2px 4px rgba(255, 145, 77, 0.2);
     --ico-shadow: drop-shadow(1px 1px 1px rgba(10, 10, 10, 0.5));
 }
 
 [data-theme="dark"] {
     --color-primary: #0f0f0f;
-    --color-secondary: #f0f0f0;
-    --color-tertiary: #d2d2d2;
-    --color-quarternary: #1e1e1e;
-    --color-accent: #ff8b52;
+    --color-secondary: #ff914d;
+    --color-tertiary: #ffa766;
+    --color-accent: #e1e1e1;
     --blur-1: rgba(15, 15, 15, 0.5);
     --blur-2: rgba(255, 139, 82, 0.5);
-    --gradient-cd: linear-gradient(45deg, rgba(10, 10, 10, 0.25) 0%, rgba(30, 30, 30, 0.25) 100%);
-    --box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
-    --ico-shadow: drop-shadow(1px 1px 1px rgba(245, 245, 245, 0.5));
+    --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    --ico-shadow: drop-shadow(1px 1px 1px rgba(255, 145, 77, 0.5));
 }
 
 /* Basic reset */
@@ -61,8 +52,7 @@
 html,
 body {
     width: 100%;
-    height: 100lvh;
-    max-height: 100dvh;
+    height: 100%;
     max-height: -webkit-fill-available;
     max-height: stretch;
     background: var(--color-primary);
@@ -149,7 +139,6 @@ a {
 
 a:hover {
     color: var(--color-accent);
-    /* transform: translateX(1ch); */
 }
 
 a.button {
@@ -237,8 +226,7 @@ a:not(.button):not(.project-links a):not(.socials a):hover::after {
     bottom: 0;
     right: 0;
     width: 100%;
-    height: 100vh;
-    height: 100dvh;
+    height: 100svh;
     z-index: 0;
     transition: all 0.75s ease-in-out;
     pointer-events: none;
@@ -249,7 +237,7 @@ img {
     max-width: 100%;
     height: auto;
     object-fit: cover;
-    background: var(--color-secondary);
+    background: var(--color-tertiary);
 }
 
 hr {
@@ -260,10 +248,44 @@ hr {
     width: 100%;
 }
 
+.radial-chart {
+    max-height: 250px;
+    overflow: hidden;
+    aspect-ratio: 1 / 1;
+    display: block;
+}
+
+.hex-lines {
+    stroke: var(--color-tertiary);
+    stroke-width: 1;
+    stroke-dasharray: 3 3;
+    opacity: 0.7;
+}
+
+.hexagon {
+    stroke: var(--color-tertiary);
+    fill: none;
+    stroke-dasharray: 3 3;
+    stroke-width: 1;
+    filter: var(--ico-shadow);
+}
+
+.skill-data {
+    fill: var(--blur-2);
+    stroke: var(--color-secondary);
+    stroke-width: 1.5;
+}
+
+.skill-label {
+    fill: var(--color-tertiary);
+    font-size: var(--p-size);
+    text-anchor: middle;
+}
+
 /* ====== Content Row ====== */
 main {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     /* height: calc(var(--vh, 1vh) * 100); */
 }
 
@@ -348,8 +370,8 @@ section {
 }
 
 .topic {
-    border: 1px solid var(--color-secondary);
-    color: var(--color-secondary);
+    border: 1px solid var(--color-tertiary);
+    color: var(--color-tertiary);
     font-size: var(--p-size);
     padding: min(0.25em, 1%) min(0.5em, 2%);
     border-radius: 5px;
@@ -429,6 +451,11 @@ section {
 
     a.button {
         width: min(450px, 45%);
+    }
+
+
+    .radial-chart {
+        max-height: 300px;
     }
 
     .container {
