--- a/portfolio/src/styles/projects.css
+++ b/portfolio/src/styles/projects.css
@@ -33,8 +33,8 @@
   border-radius: 10px;
   box-shadow: var(--box-shadow);
   background: var(--blur-1);
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
   color: var(--color-secondary);
   display: flex;
   flex-direction: column;
@@ -112,15 +112,14 @@
 .project:hover .button {
   border: 5px solid var(--color-primary);
   color: var(--color-primary);
-  transition: transform 0.2s ease-in-out;
+  transition: color 0.3s ease-in-out;
 }
 
 .project:hover .button:hover {
   background-color: var(--color-accent);
   border: 5px solid var(--color-accent);
   color: var(--color-primary);
-  text-decoration: none;
-  transition: transform 0.2s ease-in-out;
+  transition: color 0.3s ease-in-out;
 }
 
 @media(min-width: 768px) {
