--- a/portfolio/src/styles/global.css
+++ b/portfolio/src/styles/global.css
@@ -29,8 +29,13 @@
 }
 
 [data-theme="dark"] {
+    /* --text: #f0f0f0;
+    --background: #0f0f0f;
+    --primary: #f78448;
+    --secondary: #ff914d;
+    --accent: #ffa766; */
     --color-primary: #0f0f0f;
-    --color-secondary: #ff914d;
+    --color-secondary: #f78448;
     --color-tertiary: #ff914d;
     --color-accent: #e1e1e1;
     --blur-1: rgba(15, 15, 15, 0.5);
@@ -52,7 +57,8 @@
 html,
 body {
     width: 100%;
-    height: 100%;
+    height: 100dvh;
+    height: calc(var(--vh, 1vh) * 100);
     max-height: -webkit-fill-available;
     max-height: stretch;
     background: var(--color-primary);
