styles: project card

--- a/portfolio/src/styles/projects.css
+++ b/portfolio/src/styles/projects.css
@@ -30,12 +30,13 @@
   width: 70vw;
   height: 80vh;
   margin: 0 15vw;
-  /* border-radius: 10px; */
+  border-radius: 10px;
   box-shadow: var(--box-shadow);
   background: var(--blur-1);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   color: var(--color-secondary);
+  border: 1px solid var(--color-tertiary);
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -65,13 +66,13 @@
   width: 100%;
   height: auto;
   object-fit: cover;
-  /* border-radius: 10px 10px 0 0; */
+  border-radius: 10px 10px 0 0;
   transition: transform 0.2s ease-in-out;
 }
 
 .project:hover img {
   transform: scale(0.9) translateY(10px);
-  /* border-radius: 10px; */
+  border-radius: 10px;
 }
 
 .project_content {
