--- a/portfolio/src/styles/projects.css
+++ b/portfolio/src/styles/projects.css
@@ -36,7 +36,7 @@
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   color: var(--color-secondary);
-  border: 1px solid var(--color-tertiary);
+  border: 1px solid var(--blur-1);
   display: flex;
   flex-direction: column;
   overflow: hidden;
