fix: mobile background size

--- a/portfolio/src/styles/global.css
+++ b/portfolio/src/styles/global.css
@@ -231,8 +231,8 @@ a:not(.button):not(.project-links a):not(.socials a):hover::after {
     left: 0;
     bottom: 0;
     right: 0;
-    width: 100%;
-    height: 100svh;
+    width: 100vw;
+    height: 100vh;
     z-index: 0;
     pointer-events: none;
 }
